--- a/HTML/Part1.html
+++ b/HTML/Part1.html
@@ -30,12 +30,10 @@
     .clear-font-btn{background:#667eea;color:#fff;border:none;padding:8px 16px;border-radius:6px;cursor:pointer;font-size:.85em;font-weight:600;z-index:1;height:44px}
     .clear-font-btn:hover{background:#5568d3}
 
-    /* Unified row for Key, Decimal, Hex, Preview, Download (equal widths) */
-    .input-row{display:grid;grid-template-columns:repeat(5,1fr);gap:12px;margin-bottom:20px;align-items:end}
+    /* Unified row for Key, Decimal, Hex, Download (equal widths) */
+    .input-row{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-bottom:20px;align-items:end}
     .btn-inline{width:100%;height:44px;border:none;border-radius:8px;font-weight:700;cursor:pointer;transition:.15s}
     .btn-inline:active{transform:translateY(1px)}
-    .btn-preview{background:#667eea;color:#fff}
-    .btn-preview:hover{background:#5568d3}
     .btn-download{background:#48bb78;color:#fff}
     .btn-download:hover{background:#38a169}
     .btn-download:disabled{background:#4a5568;cursor:not-allowed}
@@ -51,10 +49,11 @@
     .toggle-group{display:flex;gap:10px;align-items:center}
     .toggle-btn{flex:1;padding:10px 20px;border:2px solid #4a5568;background:#2d3748;color:#e2e8f0;border-radius:8px;cursor:pointer;font-weight:600;transition:.2s}
     .toggle-btn.active{background:#667eea;color:#fff;border-color:#667eea}
+    .toggle-btn:disabled{opacity:.45;cursor:not-allowed}
 
     .preview-section{margin-top:30px}
     .preview-title{font-size:1.1em;font-weight:600;color:#e2e8f0;margin-bottom:15px}
-    .preview-split{display:grid;grid-template-columns:1fr 1fr;gap:16px}
+    .preview-split{display:grid;grid-template-columns:minmax(0,0.7fr) minmax(0,1.3fr);gap:16px}
     .card{background:#1a202c;border:2px dashed #4a5568;border-radius:12px;min-height:320px;padding:16px;display:flex;align-items:flex-start;justify-content:center;position:relative}
     .card-inner{width:100%;max-width:520px;min-height:288px;display:flex;align-items:flex-start;justify-content:center}
     #previewCanvasHost{width:100%;height:288px;border-radius:10px;position:relative}
@@ -65,6 +64,9 @@
     .shape-toggle{display:flex;gap:8px}
     .shape-btn{flex:1;padding:10px;border:2px solid #4a5568;background:#1a202c;color:#e2e8f0;border-radius:8px;cursor:pointer;font-weight:700}
     .shape-btn.active{border-color:#667eea;background:#2d3478a0}
+    .border-settings{margin-top:10px;display:none;flex-direction:column;gap:8px}
+    .border-settings label{margin-bottom:4px}
+    .border-settings input{width:100%;padding:10px 12px;border:2px solid #4a5568;background:#1a202c;color:#e2e8f0;border-radius:8px}
     .size-row{display:grid;grid-template-columns:1fr auto;align-items:center;gap:10px}
     .size-row .unit-toggle{display:flex;gap:8px}
     .unit-btn{padding:8px 10px;border:2px solid #4a5568;background:#1a202c;color:#e2e8f0;border-radius:8px;cursor:pointer;font-weight:600}
